--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,11 @@
 		</div>
 			
 		<div class="row col-lg-offset-4 col-lg-4 form-group">
-			<b><p><%=@str %></p></b>
+			<b><p><%= @str %></p></b>
+		</div>
+
+		<div class="row col-lg-offset-4 col-lg-4">
+			<button><%= link_to 'Show logs', logs_path %></button>
 		</div>
 
 	</div>
